[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8" }
chrono = "0.4.44"
serde = { version = "1.0", features = ["derive"] }
sqlx = "0.8.6"
thiserror = "2.0.18"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
