[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.8" }
chrono = "0.4.44"
password-hash = "0.6.1"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"]}
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
